--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -3,6 +3,7 @@
  min-height: 100vh;
  display: flex;
  flex-wrap: wrap;
+ justify-content: space-evenly;
  background-color: coral;
 }
 
@@ -35,7 +36,7 @@
     margin-top: 100px;
     margin-left: 100px;
     display:inline-flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-end;
     background-color: rgb(152, 100, 237);
     border-radius: 5px;
@@ -43,7 +44,7 @@
      
  .box-two__box {
     width: 78px;
-    height: 78px;
+    height: 100px;
     background-color: rgb(86, 163, 86);
     border-radius: 5px;
     margin-left: 20px;
@@ -54,7 +55,8 @@
     min-height: 100vh;
     display: flex;
     flex-wrap: wrap;
-    background-color: coral;
+    justify-content: space-evenly;
+    background-color: rgb(243, 100, 47);
    }
    
 
@@ -64,8 +66,8 @@
     margin-top: 100px;
     margin-left: 100px;
     display:inline-flex;
-    justify-content: flex-start;
-    align-items: flex-end;
+    justify-content: flex-end;
+    align-items: center;
     background-color: rgb(191, 136, 243);
     border-radius: 5px;
    }
@@ -76,15 +78,11 @@
     background-color: rgb(53, 114, 53);
     border-radius: 5px;
     margin-left: 20px;
+    margin-right: 20px;
     margin-bottom: 20px;
    }
 
-.layout-three {
-    min-height: 100vh;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: coral;
-   }
+
    
    .box-four{
     width: 468px;
@@ -92,8 +90,8 @@
     margin-top: 100px;
     margin-left: 100px;
     display:inline-flex;
-    justify-content: flex-start;
-    align-items: flex-end;
+    justify-content: space-evenly;
+    align-items: flex-start;
     background-color: rgb(194, 115, 218);
     border-radius: 5px;
    }
@@ -104,9 +102,16 @@
     background-color: rgb(23, 110, 67);
     border-radius: 5px;
     margin-left: 20px;
+    margin-top: 20px;
     margin-bottom: 20px;
    }
 
+.layout-three {
+    min-height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: rgb(250, 75, 11);
+   }
    
    .box-five{
     width: 468px;
@@ -114,39 +119,86 @@
     margin-top: 100px;
     margin-left: 100px;
     display:inline-flex;
-    justify-content: flex-start;
-    align-items: flex-end;
+    justify-content: space-evenly;
     background-color: rgb(135, 77, 153);
     border-radius: 5px;
    }
    
-   .box-five__box {
+   .box-five__box1 {
     width: 78px;
-    height: 78px;
+    height: 100px;
     background-color: rgb(38, 148, 87);
     border-radius: 5px;
     margin-left: 20px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-align: center;
    }
 
-   
+   .box-five__box2 {
+    width: 78px;
+    height: 70px;
+    background-color: rgb(38, 148, 87);
+    border-radius: 5px;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    align-self: center ;
+    text-align: center;
+   }
+
+   .box-five__box3 {
+    width: 78px;
+    height: 100px;
+    background-color: rgb(38, 148, 87);
+    border-radius: 5px;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+   }
+
    .box-six{
     width: 468px;
     height: 160px;
     margin-top: 100px;
     margin-left: 100px;
     display:inline-flex;
-    justify-content: flex-start;
-    align-items: flex-end;
+    justify-content: space-evenly;
     background-color: rgb(237, 100, 207);
     border-radius: 5px;
    }
    
-   .box-six__box {
+   .box-six__box1 {
     width: 78px;
-    height: 78px;
-    background-color: rgb(61, 117, 28);
+    height: 100px;
+    background-color: rgb(38, 148, 87);
     border-radius: 5px;
     margin-left: 20px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+
+   }
+
+   .box-six__box2 {
+    width: 200px;
+    height: 100px;
+    background-color: rgb(38, 148, 87);
+    border-radius: 5px;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+
+
+   }
+
+   .box-six__box3 {
+    width: 78px;
+    height: 100px;
+    background-color: rgb(38, 148, 87);
+    border-radius: 5px;
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+   
    }
