--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -3,15 +3,16 @@
  min-height: 100vh;
  display: flex;
  flex-wrap: wrap;
- justify-content: space-evenly;
+ justify-content: center;
  background-color: coral;
 }
 
 .box-one{
  width: 468px;
  height: 160px;
- margin-top: 100px;
- margin-left: 100px;
+ margin-top: 50px;
+ margin-left: 50px;
+ margin-right: 50px;
  display:inline-flex;
  justify-content: flex-start;
  align-items: flex-end;
@@ -33,8 +34,9 @@
 .box-two{
     width: 468px;
     height: 160px;
-    margin-top: 100px;
-    margin-left: 100px;
+    margin-top: 50px;
+    margin-left: 50x;
+    margin-right: 50px;
     display:inline-flex;
     justify-content: center;
     align-items: flex-end;
@@ -55,16 +57,17 @@
     min-height: 100vh;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    background-color: rgb(243, 100, 47);
+    justify-content: center;
+    background-color: coral;
    }
    
 
    .box-three{
     width: 468px;
     height: 160px;
-    margin-top: 100px;
-    margin-left: 100px;
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
     display:inline-flex;
     justify-content: flex-end;
     align-items: center;
@@ -87,8 +90,9 @@
    .box-four{
     width: 468px;
     height: 160px;
-    margin-top: 100px;
-    margin-left: 100px;
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
     display:inline-flex;
     justify-content: space-evenly;
     align-items: flex-start;
@@ -109,15 +113,17 @@
 .layout-three {
     min-height: 100vh;
     display: flex;
-    justify-content: space-evenly;
-    background-color: rgb(250, 75, 11);
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: coral;
    }
    
    .box-five{
     width: 468px;
     height: 160px;
-    margin-top: 100px;
-    margin-left: 100px;
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
     display:inline-flex;
     justify-content: space-evenly;
     background-color: rgb(135, 77, 153);
@@ -161,8 +167,9 @@
    .box-six{
     width: 468px;
     height: 160px;
-    margin-top: 100px;
-    margin-left: 100px;
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
     display:inline-flex;
     justify-content: space-evenly;
     background-color: rgb(237, 100, 207);
